# keycloak-sms-priority-migration

./: .gitignore  README.md  docker-compose.yml  migrate.py  pyproject.toml
.github/workflows/: release.yml
dev/: seed.py
tests/: conftest.py  test_migrate.py
