[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-sms-priority-migration"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "duckdb>=1.0",
]

[project.scripts]
migrate = "migrate:main"
