[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-sms-priority-migration"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "duckdb>=1.0",
]

[project.scripts]
migrate = "migrate:main"

[tool.setuptools]
py-modules = ["migrate"]

[tool.setuptools_scm]
